# senior-thesis

_ide/: .peers.ini  workspace_journal.py  workspace_journal_14140.py  workspace_journal_15284.py  workspace_journal_15556.py  workspace_journal_19476.py  workspace_journal_19588.py  workspace_journal_19668.py  workspace_journal_1980.py  workspace_journal_20880.py  workspace_journal_22608.py  workspace_journal_24764.py  workspace_journal_3600.py  workspace_journal_3824.py  workspace_journal_4464.py  workspace_journal_5552.py  workspace_journal_5928.py  workspace_journal_6524.py
dl_from_scratch/: compare_tensors.py  transformer_class.py  transformer_class_final.py  transformer_class_kvcache.py  transformer_from_scratch_sectioned.ipynb
flash_attn/: compile_commands.json  exp_lut.h  flash_attn.cpp  flash_attn.h  flash_attn_tb.cpp  flashattn.cpp  flashattn.h  flashattn_tb.cpp  hls_config.cfg  loop_pipeline.cpp  loop_pipeline.h  loop_pipeline_tb.cpp  pynq_script.py.txt  vitis-comp.json
flash_attn/flash_attn/: flash_attn.hlscompile_summary  flash_attn.hlsrun_cosim_summary  (+3 more)
flash_attn_vivado/: flash_attn_block_wrapper.xsa  flash_attn_vivado.xpr
flash_attn_vivado/flash_attn_vivado.ip_user_files/mem_init_files/: CMakeLists.txt  Makefile  array_passthrough.mdd  array_passthrough.tcl  array_passthrough.yaml  column_buffer.mdd  column_buffer.tcl  column_buffer.yaml  flash.bda  flash.bmj  flash_attn_block.bda  flash_attn_block.bmj  sc_xtlm_flash_attn_block_axi_smc_0.mem  sc_xtlm_flash_axi_smc_1.mem
scripts/: tiny_llm_fpga.py  vanilla_attn_wrapper.py
(+2241 files in other folders)
